--- a/public/project/views/header/header.view.html
+++ b/public/project/views/header/header.view.html
@@ -29,6 +29,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right margin-set1">
+                <li ng-if="location.url() == '/home'">
+                   <a href="#/admin/user" class="margin-set2">Admin</a>
+                </li>
                 <li ng-hide="user">
                     <a href="#/register" class="margin-set2">Sign Up</a>
                 </li>
