--- a/public/experiments/assignment/client/views/forms/forms.view.html
+++ b/public/experiments/assignment/client/views/forms/forms.view.html
@@ -17,24 +17,24 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="text" ng-model = "form.title" class="form-control text" placeholder="name">
+                            <input type="text" ng-model = "model.form.title" class="form-control text" placeholder="name">
                         </td>
                         <td>
-                            <a ng-click="addForm(form)">
+                            <a ng-click="model.addForm(model.form)">
                                 <span class=" edit-icon-lt glyphicon glyphicon-plus" aria-hidden="true"></span>
                             </a>
-                            <a ng-click="updateForm(form)">
+                            <a ng-click="model.updateForm(model.form)">
                                 <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                             </a>
                         </td>
                     </tr>
-                    <tr ng-repeat="form in forms">
+                    <tr ng-repeat="form in model.forms">
                         <td>{{form.title}}</td>
                             <td>
-                                <a ng-click="deleteForm($index)">
+                                <a ng-click="model.deleteForm($index)">
                                     <span class="edit-icon-lt glyphicon glyphicon-remove" aria-hidden="true"></span>
                                 </a>
-                                <a ng-click="selectForm($index)">
+                                <a ng-click="model.selectForm($index)">
                                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                 </a>
                             </td>
