--- a/public/experiments/assignment/client/views/users/register.view.html
+++ b/public/experiments/assignment/client/views/users/register.view.html
@@ -48,7 +48,9 @@
                    class="btn btn-primary btn-block">Register</a>
             </div>
         </div>
-        <div ng-show="model.showAlert" class="alert alert-info">
+        <div ng-show="model.showAlert" class="alert alert-info alert-dismissable">
+            <a class="panel-close close" data-dismiss="alert">×</a>
+            <i class="fa fa-info-circle"></i>
             <strong>Username already exists!</strong> Please choose a different username.
         </div>
     </form>
