Started working form fields and created required files and path

--- a/public/experiments/assignment/client/views/forms/field.view.html
+++ b/public/experiments/assignment/client/views/forms/field.view.html
@@ -1,19 +1,11 @@
 <div class="container-fluid">
     <div class="row">
-        <!--<div class="col-sm-3 col-md-2 sidebar">-->
-            <!--<ul class="nav nav-sidebar">-->
-                <!--<li><a href="../home/home.view.html">Home <span class="sr-only">(current)</span></a></li>-->
-                <!--<li><a href="../users/profile.view.html">profile</a></li>-->
-                <!--<li><a href="../admin/admin.view.html">Admin</a></li>-->
-                <!--<li class="active"><a href="forms.view.html">Forms</a></li>-->
-            <!--</ul>-->
-        <!--</div>-->
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Forms: Registration Form</h1>
             <ul class="nav nav-tabs">
 
-                <li role="presentation"><a href="forms.view.html">Forms</a></li>
-                <li role="presentation" class="active"><a href="form-fields.view.html">Fields</a></li>
+                <li role="presentation"><a href="#/forms">Forms</a></li>
+                <li role="presentation" class="active"><a href="">Fields</a></li>
             </ul>
 
             <div class="form-fields container-fluid">
