--- a/public/experiments/assignment/client/views/forms/forms.view.html
+++ b/public/experiments/assignment/client/views/forms/forms.view.html
@@ -6,7 +6,7 @@
 
             <ul class="nav nav-tabs">
                 <li role="presentation" class="active"><a href="#/forms">Forms</a></li>
-                <li role="presentation"><a href="#/">Fields</a></li>
+                <li role="presentation"><a href="#/form-field">Fields</a></li>
             </ul>
 
             <div class="table-responsive">
