--- a/public/experiments/assignment/client/views/forms/field.view.html
+++ b/public/experiments/assignment/client/views/forms/field.view.html
@@ -17,7 +17,9 @@
                 <div class="row">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
-                            <input type="text" class="form-control" id="fname" placeholder="First Name">
+                            <input type="text"
+                                   ng-model="model.firstName"
+                                   class="form-control" id="fname" placeholder="First Name">
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
@@ -44,7 +46,9 @@
                 <div class="row">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
-                            <input type="text" class="form-control" id="lname" placeholder="Last Name">
+                            <input type="text"
+                                   ng-model="model.lastName"
+                                   class="form-control" id="lname" placeholder="Last Name">
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
@@ -71,7 +75,9 @@
                 <div class="row">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
-                            <input type="date" class="form-control" id="dob" placeholder="Select Date">
+                            <input type="date"
+                                   ng-model="model.date"
+                                   class="form-control" id="dob" placeholder="Select Date">
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
@@ -98,7 +104,8 @@
                 <div class="row">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
-                            <select class="form-control" id="sel1">
+                            <select ng-model="model.gender"
+                                    class="form-control" id="sel1">
                                 <option>Male</option>
                                 <option>Female</option>
                             </select>
@@ -187,17 +194,17 @@
                 <div class="row">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
-                            <select class="form-control" id="sel2">
-                                <option>Single Line Text</option>
-                                <option>Date</option>
-                                <option>Dropdown</option>
-                                <option>Checkboxes</option>
-                                <option>Radio buttons</option>
-                                <option>Paragraph Text Field</option>
+                            <select ng-model="model.fieldType" class="form-control" id="sel2">
+                                <option>Single Line Text Field</option>
+                                <option>Date Field</option>
+                                <option>Dropdown Field</option>
+                                <option>Checkboxes Field</option>
+                                <option>Radio Buttons Field</option>
+                                <option>MultiLine Text Field</option>
                             </select>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
-                            <a href="#">
+                            <a ng-click="addField(model.fieldType)">
                                 <span class="glyphicon glyphicon-plus pad-right" aria-hidden="true"></span>
                             </a>
                         </div>
