--- a/public/experiments/assignment/client/views/forms/field.view.html
+++ b/public/experiments/assignment/client/views/forms/field.view.html
@@ -8,18 +8,18 @@
                 <li role="presentation" class="active"><a href="">Fields</a></li>
             </ul>
 
-            <div class="form-fields container-fluid">
+            <div class="form-fields container-fluid" ng-repeat="field in model.fields" ng-switch on= field.type>
                 <div class="row">
                     <div class="col-xs-8 p-left">
-                    <label for="fname">First Name:</label>
+                        <label>{{field.label}}</label>
                     </div>
-                    </div>
-                <div class="row">
+                </div>
+                <div class="row" ng-switch-when="TEXT">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
                             <input type="text"
-                                   ng-model="model.firstName"
-                                   class="form-control" id="fname" placeholder="First Name">
+                                   class="form-control"
+                                   placeholder="{{field.placeholder}}"/>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
@@ -38,17 +38,13 @@
                         </div>
                     </form>
                 </div>
-                <div class="row">
-                    <div class="col-xs-8 p-left">
-                        <label for="lname">Last Name:</label>
-                    </div>
-                </div>
-                <div class="row">
+
+                <div class="row" ng-switch-when="TEXTAREA">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
-                            <input type="text"
-                                   ng-model="model.lastName"
-                                   class="form-control" id="lname" placeholder="Last Name">
+                            <textarea rows="3"
+                                   class="form-control"
+                                   placeholder="{{field.placeholder}}"/>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
@@ -67,17 +63,46 @@
                         </div>
                     </form>
                 </div>
-                <div class="row">
-                    <div class="col-xs-8 p-left">
-                        <label for="dob">Date of Birth:</label>
-                    </div>
-                </div>
-                <div class="row">
+                <!--<div class="row">-->
+                    <!--<div class="col-xs-8 p-left">-->
+                        <!--<label for="lname">Last Name:</label>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="row">-->
+                    <!--<form>-->
+                        <!--<div class="form-group col-xs-5 col-sm-7 p-left">-->
+                            <!--<input type="text"-->
+                                   <!--ng-model="model.lastName"-->
+                                   <!--class="form-control" id="lname" placeholder="Last Name">-->
+                        <!--</div>-->
+                        <!--<div class="col-xs-7 col-sm-5 gly_center">-->
+                            <!--<a href="#">-->
+                                <!--<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>-->
+                            <!--</a>-->
+                            <!--<a href="#">-->
+                                <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>-->
+                            <!--</a>-->
+                            <!--<a href="#">-->
+                                <!--<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>-->
+                            <!--</a>-->
+                            <!--<a href="#">-->
+                                <!--<span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>-->
+                            <!--</a>-->
+
+                        <!--</div>-->
+                    <!--</form>-->
+                <!--</div>-->
+                <!--<div class="row">-->
+                    <!--<div class="col-xs-8 p-left">-->
+                        <!--<label for="dob">Date of Birth:</label>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <div class="row" ng-switch-when="DATE">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
                             <input type="date"
-                                   ng-model="model.date"
-                                   class="form-control" id="dob" placeholder="Select Date">
+                                   class="form-control"
+                                   placeholder="{{field.placeholder}}"/>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
@@ -96,16 +121,15 @@
                         </div>
                     </form>
                 </div>
-                <div class="row">
-                    <div class="col-xs-8 p-left">
-                        <label for="sel1">Gender:</label>
-                    </div>
-                </div>
-                <div class="row">
+                <!--<div class="row">-->
+                    <!--<div class="col-xs-8 p-left">-->
+                        <!--<label for="sel1">Gender:</label>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <div class="row" ng-switch-when="OPTIONS">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
-                            <select ng-model="model.gender"
-                                    class="form-control" id="sel1">
+                            <select class="form-control">
                                 <option>Male</option>
                                 <option>Female</option>
                             </select>
@@ -127,12 +151,12 @@
                         </div>
                     </form>
                 </div>
-                <div class="row">
-                    <div class="col-xs-8 p-left">
-                        <label for="chkbox1">Roles:</label>
-                    </div>
-                </div>
-                <div class="row">
+                <!--<div class="row">-->
+                    <!--<div class="col-xs-8 p-left">-->
+                        <!--<label for="chkbox1">Roles:</label>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <div class="row" ng-switch-when="CHECKBOXES">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
                             <div class="checkbox chkbox1"><label><input type="checkbox" id="chkbox1">Admin</label></div>
@@ -156,12 +180,12 @@
                         </div>
                     </form>
                 </div>
-                <div class="row">
-                    <div class="col-xs-8 p-left">
-                        <label for="radio1">License Agreement:</label>
-                    </div>
-                </div>
-                <div class="row">
+                <!--<div class="row">-->
+                    <!--<div class="col-xs-8 p-left">-->
+                        <!--<label for="radio1">License Agreement:</label>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <div class="row" ng-switch-when="RADIOS">
                     <form>
                         <div class="col-xs-5 col-sm-7 form-group p-left">
                             <div class="radio rad1 "><label><input type="radio" name="optradio" id="radio1">Yes</label></div>
@@ -185,16 +209,18 @@
                         </div>
                     </form>
                 </div>
-                <hr>
+            </div>
+            <div class="form-fields container-fluid">
+            <hr>
                 <div class="row">
                     <div class="col-xs-8 p-left">
-                        <label for="sel2">Add New Field:</label>
+                        <label>Add New Field:</label>
                     </div>
                 </div>
                 <div class="row">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
-                            <select ng-model="model.fieldType" class="form-control" id="sel2">
+                            <select ng-model="model.fieldType" class="form-control">
                                 <option>Single Line Text Field</option>
                                 <option>Date Field</option>
                                 <option>Dropdown Field</option>
