fixed bug in field view

--- a/public/experiments/assignment/client/views/forms/field.view.html
+++ b/public/experiments/assignment/client/views/forms/field.view.html
@@ -44,7 +44,7 @@
                         <div class="form-group col-xs-5 col-sm-7 p-left">
                             <textarea rows="3"
                                    class="form-control"
-                                   placeholder="{{field.placeholder}}"/>
+                                   placeholder="{{field.placeholder}}"></textarea>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
