--- a/public/experiments/assignment/client/views/forms/field.view.html
+++ b/public/experiments/assignment/client/views/forms/field.view.html
@@ -63,40 +63,30 @@
                         </div>
                     </form>
                 </div>
-                <!--<div class="row">-->
-                    <!--<div class="col-xs-8 p-left">-->
-                        <!--<label for="lname">Last Name:</label>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="row">-->
-                    <!--<form>-->
-                        <!--<div class="form-group col-xs-5 col-sm-7 p-left">-->
-                            <!--<input type="text"-->
-                                   <!--ng-model="model.lastName"-->
-                                   <!--class="form-control" id="lname" placeholder="Last Name">-->
-                        <!--</div>-->
-                        <!--<div class="col-xs-7 col-sm-5 gly_center">-->
-                            <!--<a href="#">-->
-                                <!--<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>-->
-                            <!--</a>-->
-                            <!--<a href="#">-->
-                                <!--<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>-->
-                            <!--</a>-->
-                            <!--<a href="#">-->
-                                <!--<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>-->
-                            <!--</a>-->
-                            <!--<a href="#">-->
-                                <!--<span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>-->
-                            <!--</a>-->
+                <div class="row" ng-switch-when="EMAIL">
+                    <form>
+                        <div class="form-group col-xs-5 col-sm-7 p-left">
+                            <input type="email"
+                                   class="form-control"
+                                   placeholder="{{field.placeholder}}"/>
+                        </div>
+                        <div class="col-xs-7 col-sm-5 gly_center">
+                            <a href="#">
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </a>
+                            <a href="#">
+                                <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+                            </a>
 
-                        <!--</div>-->
-                    <!--</form>-->
-                <!--</div>-->
-                <!--<div class="row">-->
-                    <!--<div class="col-xs-8 p-left">-->
-                        <!--<label for="dob">Date of Birth:</label>-->
-                    <!--</div>-->
-                <!--</div>-->
+                        </div>
+                    </form>
+                </div>
                 <div class="row" ng-switch-when="DATE">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
@@ -121,17 +111,14 @@
                         </div>
                     </form>
                 </div>
-                <!--<div class="row">-->
-                    <!--<div class="col-xs-8 p-left">-->
-                        <!--<label for="sel1">Gender:</label>-->
-                    <!--</div>-->
-                <!--</div>-->
                 <div class="row" ng-switch-when="OPTIONS">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
                             <select class="form-control">
-                                <option>Male</option>
-                                <option>Female</option>
+                                <option ng-repeat="option in field.options"
+                                        value="option.value">
+                                        {{option.label}}
+                                </option>
                             </select>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
@@ -159,9 +146,13 @@
                 <div class="row" ng-switch-when="CHECKBOXES">
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
-                            <div class="checkbox chkbox1"><label><input type="checkbox" id="chkbox1">Admin</label></div>
-                            <div class="checkbox"><label><input type="checkbox" val="">Student</label></div>
-                            <div class="checkbox"><label><input type="checkbox" value="">User</label></div>
+                            <div class="checkbox" ng-repeat="option in field.options">
+                                <label>
+                                    <input type="checkbox"
+                                           value="{{option.value}}"/>
+                                    {{option.label}}
+                                </label>
+                            </div>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
                             <a href="#">
@@ -188,8 +179,11 @@
                 <div class="row" ng-switch-when="RADIOS">
                     <form>
                         <div class="col-xs-5 col-sm-7 form-group p-left">
-                            <div class="radio rad1 "><label><input type="radio" name="optradio" id="radio1">Yes</label></div>
-                            <div class="radio"><label><input type="radio" name="optradio">No</label></div>
+                            <div class="radio" ng-repeat="option in field.options">
+                                <label>
+                                    <input type="radio" value="{{option.value}}" name="optradio">{{option.label}}
+                                </label>
+                            </div>
                         </div>
 
                         <div class="col-xs-7 col-sm-5 gly_center">
