Implemented addField functionality

--- a/public/experiments/assignment/client/views/forms/field.view.html
+++ b/public/experiments/assignment/client/views/forms/field.view.html
@@ -215,12 +215,12 @@
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
                             <select ng-model="model.fieldType" class="form-control">
-                                <option>Single Line Text Field</option>
-                                <option>Date Field</option>
-                                <option>Dropdown Field</option>
-                                <option>Checkboxes Field</option>
-                                <option>Radio Buttons Field</option>
-                                <option>MultiLine Text Field</option>
+                                <option value="0">Single Line Text Field</option>
+                                <option value="1">Date Field</option>
+                                <option value="2">Dropdown Field</option>
+                                <option value="3">Checkboxes Field</option>
+                                <option value="4">Radio Buttons Field</option>
+                                <option value="5">MultiLine Text Field</option>
                             </select>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
