--- a/public/experiments/assignment/client/views/forms/field.view.html
+++ b/public/experiments/assignment/client/views/forms/field.view.html
@@ -21,7 +21,8 @@
                                    placeholder="{{field.placeholder}}"/>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
-                            <a href="#">
+                            <a href="" data-toggle="modal"
+                               data-target="#editModal" ng-click="model.editField(field)">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="" ng-click="model.cloneField(field)">
@@ -46,7 +47,9 @@
                                    placeholder="{{field.placeholder}}"></textarea>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
-                            <a href="#">
+                            <a href="" data-toggle="modal"
+                               data-target="#editModal"
+                               ng-click="model.editField(field)">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="" ng-click="model.cloneField(field)">
@@ -62,15 +65,17 @@
                         </div>
                     </form>
                 </div>
-                <div class="row" ng-switch-when="EMAIL">
+                <div class="row" ng-switch-default>
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
-                            <input type="email"
+                            <input type="text"
                                    class="form-control"
                                    placeholder="{{field.placeholder}}"/>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
-                            <a href="#">
+                            <a href="" data-toggle="modal"
+                               data-target="#editModal"
+                               ng-click="model.editField(field)">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="" ng-click="model.cloneField(field)">
@@ -90,11 +95,12 @@
                     <form>
                         <div class="form-group col-xs-5 col-sm-7 p-left">
                             <input type="date"
-                                   class="form-control"
-                                   placeholder="{{field.placeholder}}"/>
+                                   class="form-control"/>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
-                            <a href="#">
+                            <a href="" data-toggle="modal"
+                               data-target="#editModal"
+                               ng-click="model.editField(field)">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="" ng-click="model.cloneField(field)">
@@ -121,7 +127,9 @@
                             </select>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
-                            <a href="#">
+                            <a href="" data-toggle="modal"
+                               data-target="#editModal"
+                               ng-click="model.editField(field)">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="" ng-click="model.cloneField(field)">
@@ -149,7 +157,9 @@
                             </div>
                         </div>
                         <div class="col-xs-7 col-sm-5 gly_center">
-                            <a href="#">
+                            <a href="" data-toggle="modal"
+                               data-target="#editModal"
+                               ng-click="model.editField(field)">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="" ng-click="model.cloneField(field)">
@@ -176,7 +186,9 @@
                         </div>
 
                         <div class="col-xs-7 col-sm-5 gly_center">
-                            <a href="">
+                            <a href="" data-toggle="modal"
+                               data-target="#editModal"
+                               ng-click="model.editField(field)">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                             </a>
                             <a href="" ng-click="model.cloneField(field)">
@@ -223,3 +235,41 @@
         </div>
     </div>
 </div>
+
+ <!-- Modal -->
+ <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+     <div class="modal-dialog" role="document">
+         <div class="modal-content">
+             <div class="modal-header">
+                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                     <span aria-hidden="true">&times;</span></button>
+                 <h4 class="modal-title" id="myModalLabel">EDIT {{model.fieldName}} FIELD</h4>
+             </div>
+             <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label>Label:<input type="text" ng-model="model.modalField.label"
+                               class="form-control"/>
+                        </label>
+                    </div>
+                    <div ng-if="model.showPlaceholder" class="form-group">
+                        <label>Placeholder:<input type="text" ng-model="model.modalField.placeholder"
+                               class="form-control"/>
+                        </label>
+                    </div>
+                    <div ng-if="model.showOptions" class="form-group">
+                        <label>Options:<textarea type="text" rows="3" ng-model="model.modalField.options"
+                               class="form-control"></textarea>
+                        </label>
+                    </div>
+                </form>
+             </div>
+             <div class="modal-footer">
+                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                 <button type="button" class="btn btn-primary"
+                         ng-click="model.updateField(model.modalField)"
+                         data-dismiss="modal">Ok</button>
+             </div>
+         </div>
+     </div>
+ </div>
