--- a/public/experiments/assignment/client/views/header/header.view.html
+++ b/public/experiments/assignment/client/views/header/header.view.html
@@ -25,7 +25,7 @@
                 </li>
                 <li ng-hide="!currentUser"
                     ng-click="model.logOut()">
-                    <a>Logout</a>
+                    <a href="">Logout</a>
                 </li>
                 <li ng-class="{'active': model.$location.url() == '/home'}"
                     class="visible-xs">
