--- a/public/experiments/assignment/client/views/forms/forms.view.html
+++ b/public/experiments/assignment/client/views/forms/forms.view.html
@@ -20,10 +20,10 @@
                             <input type="text" ng-model = "model.form.title" class="form-control text" placeholder="name">
                         </td>
                         <td>
-                            <a ng-click="model.addForm(model.form)">
+                            <a href="" ng-click="model.addForm(model.form)">
                                 <span class=" edit-icon-lt glyphicon glyphicon-plus" aria-hidden="true"></span>
                             </a>
-                            <a ng-click="model.updateForm(model.form)">
+                            <a href="" ng-click="model.updateForm(model.form)">
                                 <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
                             </a>
                         </td>
@@ -31,10 +31,10 @@
                     <tr ng-repeat="form in model.forms">
                         <td><a href="#/form/{{form._id}}/fields">{{form.title}}</a></td>
                             <td>
-                                <a ng-click="model.deleteForm($index)">
+                                <a href="" ng-click="model.deleteForm($index)">
                                     <span class="edit-icon-lt glyphicon glyphicon-remove" aria-hidden="true"></span>
                                 </a>
-                                <a ng-click="model.selectForm($index)">
+                                <a href="" ng-click="model.selectForm($index)">
                                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                 </a>
                             </td>
@@ -46,11 +46,11 @@
                     <i class="fa fa-info-circle"></i>
                     <strong>Form with same title already exist.</strong> Please create form with different title.
                 </div>
-                <div ng-if="model.showUpdate" class="alert alert-info alert-dismissable">
-                    <a class="panel-close close" data-dismiss="alert">×</a>
-                    <i class="fa fa-info-circle"></i>
-                    <strong>Form with same title already exist.</strong> Please update form with different title.
-                </div>
+                <!--<div ng-if="model.showUpdate" class="alert alert-info alert-dismissable">-->
+                    <!--<a class="panel-close close" data-dismiss="alert">×</a>-->
+                    <!--<i class="fa fa-info-circle"></i>-->
+                    <!--<strong>Form with same title already exist.</strong> Please update form with different title.-->
+                <!--</div>-->
             </div>
         </div>
     </div>
