--- a/public/project-next/css/style.css
+++ b/public/project-next/css/style.css
@@ -188,6 +188,10 @@ footer {
 .glyphicon.glyphicon-ok {
     font-size: 20px;
 }
+
+.flag-hover:hover{
+    color: #d9534f;
+}
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
