--- a/public/project-next/views/header/header.view.html
+++ b/public/project-next/views/header/header.view.html
@@ -29,6 +29,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right margin-set1">
+                <li ng-if="location.url() == '/home'">
+                   <a href="#/admin/user" class="margin-set2">Admin</a>
+                </li>
                 <li ng-hide="user">
                     <a href="#/register" class="margin-set2">Sign Up</a>
                 </li>
@@ -36,7 +39,7 @@
                     <a href="#/login" class="margin-set2">Login</a>
                 </li>
                 <li ng-show="user">
-                    <a href="#/profile">{{user.username}}</a>
+                    <a href="">{{user.username}}</a>
                 <li ng-hide="!user"
                     ng-click="logOut()">
                     <a>Logout</a>
