--- a/public/project-next/views/home/home.view.html
+++ b/public/project-next/views/home/home.view.html
@@ -3,13 +3,18 @@
             <div class="row col-xs-12 searchbox width-colxs12 widthxsscreen">
                 <div class="col-sm-5 col-md-5">
                     <input ng-model="restname" type="text" class="form-control margin-searchbox"
-                           placeholder="Burger...Sushi(optional)"/>
+                           placeholder="Food (optional)"/>
                 </div>
-                <div class="col-sm-4 col-md-4">
-                    <input ng-model="loc" class="form-control margin-searchbox" placeholder="Boston"/>
-                </div>
-                <div class="col-sm-3 col-md-3">
-                    <button ng-click="callSearch(restname,loc)" class="btn btn-primary btn-block">Find Food</button>
+                    <div class="col-sm-5 col-md-5">
+                        <div class="input-group">
+                            <span class="input-group-addon">
+                                <a href=""><i class="fa fa-location-arrow"></i></a>
+                            </span>
+                        <input ng-model="loc" class="form-control margin-searchbox" placeholder="Boston"/>
+                        </div>
+                    </div>
+                <div class="col-sm-2 col-md-2">
+                    <button ng-click="callSearch(restname,loc)" class="btn btn-info btn-block">Find</button>
                 </div>
 
             </div>
@@ -49,18 +54,26 @@
     <!--</div>-->
     <!-- Items -->
     <div class="carousel-inner">
-
         <div class="item active">
             <img class="banner1" src="/project-next/images/food_1920x800.jpg" alt="Slide 1" />
+            <div class="carousel-caption">
+                <h3>Search favorite food place in your neighborhood</h3>
+            </div>
         </div>
         <div class="item">
             <img class="banner2" src="/project-next/images/taco_1920x800.jpg" alt="Slide 2" />
+            <div class="carousel-caption">
+                <h3>Search favorite food place in your neighborhood</h3>
+            </div>
         </div>
         <div class="item">
-            <img class="banner3" src="/project-next/images/breakfast_1920x1080.jpg" alt="Slide 3" />
+            <img class="banner3" src="/project-next/images/banner3.jpg" alt="Slide 3" />
+            <div class="carousel-caption">
+                <h3>Search favorite food place in your neighborhood</h3>
+            </div>
         </div>
     </div>
-    <h3 class="carousel-caption">See favorite food place in your neighborhood</h3>
+    <!--<h3 class="carousel-caption">See favorite food place in your neighborhood</h3>-->
 </div>
 
 <div class="container">
