--- a/public/project-next/views/search/searchhome.view.html
+++ b/public/project-next/views/search/searchhome.view.html
@@ -8,7 +8,7 @@
             <div class="col-sm-5 col-md-5">
                 <div class="input-group">
                             <span class="input-group-addon">
-                                <a href=""><i class="fa fa-location-arrow"></i></a>
+                                <a ><i class="fa fa-location-arrow"></i></a>
                             </span>
                     <input ng-model="loc" class="form-control margin-searchbox" placeholder="Boston"/>
                 </div>
